# desktop-build-tracker

./: .env-example  Cargo.toml  README.md
.github/workflows/: deploy.yml  release.yml
src/: main.rs  utils.rs
